# postgresql-polars

./: Cargo.toml  README.md
src/: data_process.rs  main.rs
