[package]
name = "unwritten"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["macros"] }
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.5", features = ["runtime-tokio-native-tls", "postgres"] }
polars = { version = "0.45", features = ["lazy"] }
